--- a/.github/workflows/metax-build-and-test.yml
+++ b/.github/workflows/metax-build-and-test.yml
@@ -52,7 +52,7 @@ jobs:
           source ~/env.sh
           export FLAGTREE_BACKEND=metax
           cd python
-          MAX_JOBS=32 pip3.10 install . --no-build-isolation
+          MAX_JOBS=32 python3.10 -m pip install . --no-build-isolation
 
       - name: FlagTree Test on Metax
         shell: bash
