[TTIR] add expression restructuring pass (#4)
* add expression restructuring pass

* add test for expression restructuring pass

* [CI/CD] Add operators test to CI

---------

Co-authored-by: shuailong616 <452509829@qq.com>
Co-authored-by: zhengyang <zhengyang@baai.ac.cn>

--- a/lib/Dialect/Triton/Transforms/CMakeLists.txt
+++ b/lib/Dialect/Triton/Transforms/CMakeLists.txt
@@ -6,6 +6,8 @@ add_triton_library(TritonTransforms
   Combine.cpp
   ReorderBroadcast.cpp
   RewriteTensorPointer.cpp
+  ExpressionRestructing.cpp
+
 
   DEPENDS
   TritonTransformsIncGen
