--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,9 @@ elseif(FLAGTREE_BACKEND STREQUAL "mthreads")
   set(CMAKE_C_COMPILER clang)
   set(CMAKE_CXX_COMPILER clang++)
   set(ENV{FLAGTREE_PLUGIN} $ENV{FLAGTREE_BACKEND})
+elseif(FLAGTREE_BACKEND STREQUAL "ascend")
+  set(CMAKE_C_COMPILER clang)
+  set(CMAKE_CXX_COMPILER clang++)
 endif()
 set(FLAGTREE_PLUGIN "$ENV{FLAGTREE_PLUGIN}")
 if(FLAGTREE_PLUGIN)
@@ -34,6 +37,19 @@ endif()
 
 project(triton)
 include(CTest)
+
+if (FLAGTREE_BACKEND STREQUAL "ascend")
+  set(TRITON_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
+  set(PATCHED_TRITON_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/third_party/ascend/triton_patch")
+  set(PATCHED_TRITON_LIBRARIES
+    "TritonIR"
+  )
+  set(PATCHED_TRITON_DEPENDS
+    "TritonTableGen"
+  )
+  include_directories(${PATCHED_TRITON_ROOT_DIR}/include)
+  include_directories(${PROJECT_BINARY_DIR}/third_party/ascend/triton_patch/include) # Tablegen'd files
+endif()
 
 if(NOT WIN32)
   list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
@@ -112,18 +128,54 @@ function(add_triton_object name)
     INTERFACE $<TARGET_OBJECTS:${name}>
   )
 
+  if (FLAGTREE_BACKEND STREQUAL "ascend")
+    set(patched_depends "")
+    foreach(dep ${ARG_DEPENDS})
+      list(FIND PATCHED_TRITON_DEPENDS "${dep}" index)
+      if(index GREATER_EQUAL 0)
+        list(APPEND patched_depends "Patched_${dep}")
+        message(STATUS "Replace ${dep} by Patched_${dep} as a dependent of ${name}")
+      else()
+        list(APPEND patched_depends ${dep})
+      endif()
+    endforeach()
+    if(patched_depends)
+      add_dependencies(${name} ${patched_depends})
+    endif()
 
-  # add_library(${name} OBJECT ${ARG_UNPARSED_ARGUMENTS})
-  if(ARG_DEPENDS)
-    add_dependencies(${name} ${ARG_DEPENDS})
-  endif()
-  if(ARG_LINK_LIBS)
-    target_link_libraries(${name} PUBLIC ${ARG_LINK_LIBS})
+    set(patched_link_libs "")
+    foreach(lib ${ARG_LINK_LIBS})
+      list(FIND PATCHED_TRITON_LIBRARIES "${lib}" index)
+      if(index GREATER_EQUAL 0)
+        list(APPEND patched_link_libs "Patched_${lib}")
+        message(STATUS "Replace ${lib} by Patched_${lib} to be linked by ${name}")
+      else()
+        list(APPEND patched_link_libs ${lib})
+      endif()
+    endforeach()
+    if(patched_link_libs)
+      target_link_libraries(${name} PUBLIC ${patched_link_libs})
+    endif()
+  else()
+    #add_library(${name} OBJECT ${ARG_UNPARSED_ARGUMENTS})
+    if(ARG_DEPENDS)
+      add_dependencies(${name} ${ARG_DEPENDS})
+    endif()
+    if(ARG_LINK_LIBS)
+      target_link_libraries(${name} PUBLIC ${ARG_LINK_LIBS})
+    endif()
   endif()
 endfunction(add_triton_object)
 
 set_property(GLOBAL PROPERTY TRITON_LIBS "")
 function(add_triton_library name)
+  if (FLAGTREE_BACKEND STREQUAL "ascend")
+    list(FIND PATCHED_TRITON_LIBRARIES "${name}" index)
+    if(index GREATER_EQUAL 0)
+      message(STATUS "Adding Patched_${name} as a lib, instead of ${name}")
+      return()
+    endif()
+  endif()
   set_property(GLOBAL APPEND PROPERTY TRITON_LIBS ${name})
   add_triton_object(${name} ${ARGN})
   llvm_update_compile_flags(${name})
@@ -162,7 +214,7 @@ include_directories(${PROJECT_SOURCE_DIR}/third_party)
 include_directories(${PROJECT_BINARY_DIR}/third_party) # Tablegen'd files
 
 # link_directories(${LLVM_LIBRARY_DIR})
-if (FLAGTREE_BACKEND STREQUAL "cambricon")
+if (FLAGTREE_BACKEND STREQUAL "cambricon" OR FLAGTREE_BACKEND STREQUAL "ascend")
   include_directories(${PROJECT_SOURCE_DIR}/include)
   include_directories(${PROJECT_BINARY_DIR}/include) # Tablegen'd files
   add_subdirectory(include)
@@ -170,6 +222,11 @@ if (FLAGTREE_BACKEND STREQUAL "cambricon")
 elseif(NOT FLAGTREE_BACKEND)
   add_subdirectory(include)
   add_subdirectory(lib)
+endif()
+
+if (FLAGTREE_BACKEND STREQUAL "ascend")
+  add_subdirectory(${PATCHED_TRITON_ROOT_DIR}/include)
+  add_subdirectory(${PATCHED_TRITON_ROOT_DIR}/lib)
 endif()
 
 # find_package(PythonLibs REQUIRED)
@@ -190,6 +247,10 @@ endif()
 if(TRITON_BUILD_PYTHON_MODULE)
   message(STATUS "Adding Python module")
   set(PYTHON_SRC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/third_party/${FLAGTREE_BACKEND}/python/src)
+
+  set(PATCHED_PYTHON_SRC_PATH ${PATCHED_TRITON_ROOT_DIR}/python/src)
+  include_directories(${PYTHON_SRC_PATH})
+
   if(NOT (FLAGTREE_BACKEND AND EXISTS "${PYTHON_SRC_PATH}"))
     set(PYTHON_SRC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/python/src)
   endif()
@@ -364,8 +425,13 @@ if(TRITON_BUILD_PYTHON_MODULE)
   if(FLAGTREE_BACKEND STREQUAL "cambricon")
     add_library(triton SHARED)
   else()
+    if(FLAGTREE_BACKEND STREQUAL "ascend")
+      set(PYTHON_IR_SRC_PATH ${PATCHED_PYTHON_SRC_PATH})
+    else()
+      set(PYTHON_IR_SRC_PATH ${PYTHON_SRC_PATH})
+    endif()
     add_library(triton SHARED ${PYTHON_SRC_PATH}/main.cc
-                ${PYTHON_SRC_PATH}/ir.cc
+                ${PYTHON_IR_SRC_PATH}/ir.cc
                 ${PYTHON_SRC_PATH}/passes.cc
                 ${PYTHON_SRC_PATH}/interpreter.cc
                 ${PYTHON_SRC_PATH}/llvm.cc)
