--- a/.github/workflows/aipu-build-and-test.yml
+++ b/.github/workflows/aipu-build-and-test.yml
@@ -3,9 +3,9 @@ name: AIPU-Build-And-Test
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "triton_v3.3.x" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "triton_v3.3.x" ]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
