--- a/.github/workflows/code-format-check.yml
+++ b/.github/workflows/code-format-check.yml
@@ -2,9 +2,9 @@ name: Code-Format-Check
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "triton_v3.2.x" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "triton_v3.2.x" ]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
