--- a/.github/workflows/ascend-build-and-test.yml
+++ b/.github/workflows/ascend-build-and-test.yml
@@ -27,4 +27,5 @@ jobs:
       - name: FlagTree Test on Ascend
         shell: bash
         run: |
+          source /usr/local/Ascend/ascend-toolkit/set_env.sh
           python3.9 ../third_party/ascend/test/tutorials/01-vector-add.py
