--- a/.github/workflows/tsingmicro-build-and-test.yml
+++ b/.github/workflows/tsingmicro-build-and-test.yml
@@ -56,4 +56,5 @@ jobs:
       - name: FlagTree Test on Tsingmicro
         shell: bash
         run: |
+          source ~/env.sh
           python3.10 -c 'import triton; print(triton.__path__)'
