--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ third_party/cambricon/
 third_party/iluvatar/iluvatarTritonPlugin.so
 third_party/triton_shared/
 third_party/xpu/backend/xpu3
+third_party/ascend
 
 # Proton
 python/triton/profiler
