[BACKEND] Update tsingmicro build dep

--- a/.github/workflows/tsingmicro-build-and-test.yml
+++ b/.github/workflows/tsingmicro-build-and-test.yml
@@ -48,6 +48,7 @@ jobs:
       - name: FlagTree Build on Tsingmicro
         shell: bash
         run: |
+          pip uninstall -y triton
           source ~/env.sh
           export FLAGTREE_BACKEND=tsingmicro
           cd python
