[BACKENDS] tsingmicro sync code (#32)
* [BACKENDS] tsingmicro sync code 2025.6.24

Adapt to the new version runtime
New operator: layernorm, matmul, embedding

---------

Co-authored-by: zhengyang <zhengyang@baai.ac.cn>

--- a/.github/workflows/tsingmicro-build-and-test.yml
+++ b/.github/workflows/tsingmicro-build-and-test.yml
@@ -48,6 +48,7 @@ jobs:
       - name: FlagTree Build on Tsingmicro
         shell: bash
         run: |
+          pip uninstall -y triton
           source ~/env.sh
           export FLAGTREE_BACKEND=tsingmicro
           cd python
@@ -59,4 +60,3 @@ jobs:
           source ~/env.sh
           python3.11 -c 'import triton; print(triton.__path__)'
           /usr/local/lib/python3.11/dist-packages/triton/backends/tsingmicro/bin/tsingmicro-opt --version
-          /usr/local/lib/python3.11/dist-packages/triton/backends/tsingmicro/bin/tsingmicro-llvm-opt --version
