--- a/.github/workflows/aipu-build-and-test.yml
+++ b/.github/workflows/aipu-build-and-test.yml
@@ -62,3 +62,4 @@ jobs:
           python3.10 third_party/aipu/python/test/test_02_fused_softmax.py
           python3.10 third_party/aipu/python/test/test_libdevice_fmod.py
           python3.10 third_party/aipu/python/test/test_libdevice_pow.py
+          python3.10 third_party/aipu/python/test/test_codegen_dma.py
